tests/compile-fail/integration_suite__integration__general__pseudo_in_inline_call.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: feature not supported by format
   ┌─ <input>:25:9
   │
25 │         inline void foo(int x) { wait(x); }
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not supported by ANM files


